--- a/src/webpages/ActivityPage.css
+++ b/src/webpages/ActivityPage.css
@@ -1,17 +1,32 @@
-.activity-container::before {
-  content: 'ACTIVITY';
-  position: absolute;
-  top: 0;
-  left: 18rem;
-  color: var(--color-primary-c);
-  font-size: var(--fx-xxl);
-  z-index: 1;
+.activity-container {
+  position: relative;
+  z-index: 2;
 }
 .activity-container > h1 {
-  position: relative;
-  left: -12rem;
-  font-size: 5rem;
-  line-height: 4.5rem;
+  margin-bottom: 1rem;
   color: var(--color-secondary-a);
-  z-index: 2;
+  font-size: var(--fs-l-smaller);
+  line-height: calc(var(--fs-l-smaller) - 10px);
+}
+.activity-palette {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: start;
+  gap: 30px;
+  width: 960px;
+  margin-bottom: 5rem;
+}
+
+.palette-item {
+  width: 300px;
+  height: 400px;
+  background-color: white;
+}
+
+.item-image {
+  width: 100%;
+  height: 60%;
+  background-color: red;
 }
