--- a/src/webpages/Layout.css
+++ b/src/webpages/Layout.css
@@ -56,7 +56,7 @@ main {
   right: 0;
   width: 90%;
   height: 8px;
-  background-color: white;
+  background-color: var(--color-primary-c);
 }
 
 @media (width < 1110px) {
@@ -69,5 +69,9 @@ main {
     top: clamp(10px, calc(5rem + ((1vw - 3.4px) * -7.9523)), 80px);
     left: clamp(-15px, calc(-0.9375rem + ((1vw - 3.4px) * 8.4416)), 50px);
     font-size: var(--fx-xxl-cl1110);
+  }
+  .main-footer::before {
+    background-color: var(--color-primary-a);
+    z-index: 5;
   }
 }
